Values loaded with APP_INITIALIZE

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <app-root>
-    <img src="assets/c64.gif" style="width: 100%; height: auto;" />
+    <img src="assets/img/c64.gif" style="width: 100%; height: auto;" />
   </app-root>
 </body>
 </html>
