Really a mess at the moment

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
   <app-root>
-    <img src="assets/img/c64.gif" style="width: 100%; height: auto;" />
+    <div id="bootscreen">
+        <img src="assets/img/c64.gif" />
+    </div>
   </app-root>
 </body>
 </html>
